--- a/src/index.css
+++ b/src/index.css
@@ -3,97 +3,111 @@
 @tailwind utilities;
 
 .star-item {
-    display: inline-block;
-    margin-bottom: 6px;
+  display: inline-block;
+  margin-bottom: 6px;
 }
 
 input[type="range"]::-webkit-slider-runnable-track {
-    -webkit-appearance: none;
-    height: 5px;
+  -webkit-appearance: none;
+  height: 5px;
 }
 
 input[type="range"]::-moz-range-track {
-    -moz-appearance: none;
-    height: 5px;
+  -moz-appearance: none;
+  height: 5px;
 }
 
 input[type="range"]::-ms-track {
-    appearance: none;
-    height: 5px;
+  appearance: none;
+  height: 5px;
 }
 
 input[type="range"]::-webkit-slider-thumb {
-    -webkit-appearance: none;
-    width: 2rem;
-    height: 2rem;
-    background-color: white;
-    border: solid 1px #ccc;
-    border-radius: 1rem;
-    margin-top: -0.6rem;
-    pointer-events: auto;
-    cursor: pointer;
+  -webkit-appearance: none;
+  width: 2rem;
+  height: 2rem;
+  background-color: white;
+  border: solid 1px #ccc;
+  border-radius: 1rem;
+  margin-top: -0.6rem;
+  pointer-events: auto;
+  cursor: pointer;
 }
 
 input[type="range"]::-webkit-slider-thumb:active {
-    border: solid 1px rgb(144, 211, 255);
+  border: solid 1px rgb(144, 211, 255);
 }
 
 input[type="range"]::-moz-range-thumb {
-    -moz-appearance: none;
-    width: 2rem;
-    height: 2rem;
-    background-color: white;
-    border: solid 1px #ccc;
-    border-radius: 1rem;
-    margin-top: -0.6rem;
-    pointer-events: auto;
-    cursor: pointer;
+  -moz-appearance: none;
+  width: 2rem;
+  height: 2rem;
+  background-color: white;
+  border: solid 1px #ccc;
+  border-radius: 1rem;
+  margin-top: -0.6rem;
+  pointer-events: auto;
+  cursor: pointer;
 }
 
 input[type="range"]::-moz-range-thumb:active {
-    border: solid 1px rgb(144, 211, 255);
+  border: solid 1px rgb(144, 211, 255);
 }
 
 input[type="range"]::-ms-thumb {
-    appearance: none;
-    width: 2rem;
-    height: 2rem;
-    background-color: white;
-    border: solid 1px #ccc;
-    border-radius: 1rem;
-    margin-top: -0.6rem;
-    pointer-events: auto;
-    cursor: pointer;
+  appearance: none;
+  width: 2rem;
+  height: 2rem;
+  background-color: white;
+  border: solid 1px #ccc;
+  border-radius: 1rem;
+  margin-top: -0.6rem;
+  pointer-events: auto;
+  cursor: pointer;
 }
 
 input[type="range"]::-ms-thumb:active {
-    border: solid 1px rgb(144, 211, 255);
+  border: solid 1px rgb(144, 211, 255);
 }
 
 button.slick-arrow::before {
-    font-size: 50px !important;
-    color: yellow !important;
+  font-size: 50px !important;
+  color: yellow !important;
 }
 
 .slick-next {
-    right: 35px !important;
-    top: 45% !important;
+  right: 35px !important;
+  top: 45% !important;
 }
 
 .slick-prev {
-    left: 10px !important;
-    z-index: 10 !important;
-    top: 45% !important;
+  left: 10px !important;
+  z-index: 10 !important;
+  top: 45% !important;
+}
+
+.button-bar {
+  background-color: #63a4ff;
+  background-image: linear-gradient(315deg, #63a4ff 0%, #83eaf1 74%);
+}
+
+.button-search {
+  background-color: #734ae8;
+  background-image: linear-gradient(315deg, #734ae8 0%, #89d4cf 74%);
+}
+
+.linea {
+  text-decoration: none;
 }
 
 @keyframes slide-right {
-    0% {
-        -webkit-transform: translateX(0);
-        transform: translateX(0);
-    }
+  0% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+  }
 
-    100% {
-        -webkit-transform: translateX(100px);
-        transform: translateX(100px);
-    }
+  100% {
+    -webkit-transform: translateX(100px);
+    transform: translateX(100px);
+  }
 }
